- fix top left menu alignment

--- a/src/components/VT3D_UI/style.css
+++ b/src/components/VT3D_UI/style.css
@@ -24,6 +24,8 @@
 }
 
 #top-left-ui {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top: var(--top);
     left: var(--left);
